# fabricfmt

./: .gitignore  AUDIT_ITERATION_2.md  AUDIT_SUMMARY.md  COMPLETE_ANALYSIS_SUMMARY.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  README.md  SQL_STYLE_GUIDE.md  STYLE_GUIDE.md  check_hex.js  package-lock.json  package.json  ruff.toml  tsconfig.base.json
.beads/: config.yaml  issues.jsonl
.github/: copilot-instructions.md
.github/workflows/: auto-tag.yml  release-chromium.yml  release-core.yml  release.yml
crates/sparkfmt-core/src/: ast_converter.rs  ast_converter.rs.bak  formatter.rs  ir.rs  lib.rs  parser.rs
crates/sparkfmt-core/tests/: acceptance.rs  comment_preservation_tests.rs  ddl_dml_tests.rs  from_clause_features.rs
crates/sparkfmt-v2/: Cargo.toml
crates/sparkfmt-v2/src/: formatter.rs  lib.rs  printer.rs
crates/sparkfmt-wasm/: Cargo.toml
crates/sparkfmt-wasm/src/: lib.rs
scripts/: bench-parallel.mjs  bench-warmup.mjs  release.js
src/: cli.ts  formatter.ts  formatting-context.ts  index.ts  noqa-detector.ts  notebook-formatter.ts  output-builder.ts  parse-tree-analyzer.ts  test.ts  token-utils.ts  types.ts
src/formatters/: index.ts  python-formatter.ts  sql-formatter.ts
src/tests/: expressions.test.ts  index.ts  noqa.test.ts  spark-features.test.ts
src/tests/sql/: basic-select.test.ts  comments.test.ts  compact-query.test.ts  delta-lake.test.ts  dml.test.ts  expressions.test.ts  format-directives.test.ts  grouping.test.ts  joins.test.ts  magic-sql.test.ts  semicolon.test.ts  table-operators.test.ts  type-casts.test.ts  utility.test.ts  (+2 more)
