[package]
name = "sparkfmt-v2"
version = "0.1.0"
edition = "2021"
description = "Spark SQL Formatter v2 - ANTLR-based clean implementation"

[dependencies]
# Use the ANTLR parser from the existing crate
sparkfmt-core = { path = "../sparkfmt-core" }
# Need antlr4rust for ParseTree trait
antlr4rust = "0.5.2"

[dev-dependencies]
